--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -150,6 +150,8 @@ body {
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.02em;
+  position: relative;
+  color: var(--accent-color);
 }
 .item-header{
   padding-top: 32px;
@@ -158,6 +160,21 @@ body {
 .item-header:not(:last-child){
   margin-right: 50px;
 }
+
+.portfolio{
+color: var(--color-blue);
+}
+.portfolio::after {
+  content: "";
+  width: 100%;
+  height: 4px;
+  background-color: var(--color-blue);
+  position: absolute;
+  display: block;
+  margin-top: 32px;
+  border-radius: 2px;
+}
+
 .list-grey {
   margin-left: auto;
   display: flex;
@@ -181,9 +198,7 @@ body {
   margin-right: 10px;
   fill: currentColor;
 }
-.link-header {
-  color: var(--accent-color);
-}
+
 a.link-header:focus {
   color: var(--color-blue);
 }
@@ -239,12 +254,45 @@ a.link-grey:hover {
 
 .item {
   border: 1px solid #eeeeee;
+  margin-bottom: 30px;
 }
 .item:not(:nth-child(3n)){
   margin-right: 30px;
 }
-.item{
-  margin-bottom: 30px;
+.item:hover{
+border: 1px solid #EEEEEE;
+box-sizing: border-box;
+box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 
+0px 4px 4px rgba(0, 0, 0, 0.06), 
+1px 4px 6px rgba(0, 0, 0, 0.16);
+}
+
+.portfolio-item-wrap{
+position: relative;
+overflow: hidden;
+}
+.portfolio-item-text{
+  padding: 63px 24px;
+  position: absolute;
+top: 0;
+font-size: 18px;
+line-height: 1.56;
+letter-spacing: 0.03em;
+color: #FFFFFF;
+transform: translateY(100%);
+transition: 300ms;
+background-color:  rgba(33, 150, 243, 0.9);
+height: 100%;
+}
+.item:hover .portfolio-item-text{
+  transform: translateY(0);
+}
+.item:focus{
+border: 1px solid #EEEEEE;
+box-sizing: border-box;
+box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 
+0px 4px 4px rgba(0, 0, 0, 0.06), 
+1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 .item:nth-child(7){
   margin-bottom: 0;
@@ -380,4 +428,24 @@ a.link-footer:hover {
 }
 a.link-footer:focus {
   color: var(--color-blue);
+}
+
+
+/*---------MODAL-----------*/
+
+.backdrop{
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.2);
+  position: fixed;
+  top: 0;
+}
+.modal{
+  min-width: 528px;
+  min-height: 581px;
+  background: #FFFFFF;
+box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 
+0px 1px 1px rgba(0, 0, 0, 0.14), 
+0px 2px 1px rgba(0, 0, 0, 0.2);
+border-radius: 4px;
 }
