--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -152,7 +152,8 @@ body {
   letter-spacing: 0.02em;
   position: relative;
   color: var(--accent-color);
-  transition: color 250ms;
+  transition: color 250ms
+  cubic-bezier(0.4, 0, 0.2, 1);
 }
 .item-header{
   padding-top: 32px;
@@ -193,7 +194,8 @@ color: var(--color-blue);
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.02em;
-  transition: color 250ms;
+  transition: color 250ms
+  cubic-bezier(0.4, 0, 0.2, 1);
 }
 .header-icon{
   fill: var(--color-grey);
@@ -228,12 +230,15 @@ a.link-grey:hover {
 }
 .btn {
   padding: 6px 22px;
+  transition: color 250ms
+  cubic-bezier(0.4, 0, 0.2, 1);
 }
 .item-btn:not(:last-child) {
   margin-right: 9px;
 }
 .item-btn{
-  transition: color 250ms;
+transition: background-color 250ms
+  cubic-bezier(0.4, 0, 0.2, 1);
 }
 .btn:hover {
   background-color: var(--color-blue);
@@ -288,6 +293,8 @@ transform: translateY(100%);
 transition: 300ms;
 background-color:  rgba(33, 150, 243, 0.9);
 height: 100%;
+transition: transform 250ms
+cubic-bezier(0.4, 0, 0.2, 1);
 }
 .item:hover .portfolio-item-text{
   transform: translateY(0);
@@ -365,7 +372,8 @@ box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12),
   line-height: 1.71;
   letter-spacing: 0.03em;
     color: var(--color-grey);
-  transition: color 250ms;
+  transition: color 250ms
+  cubic-bezier(0.4, 0, 0.2, 1);
 }
 .link-footer-street{
   display: flex;
@@ -374,7 +382,8 @@ box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12),
   line-height: 1.71;
   letter-spacing: 0.03em;
   color: var(--color-white);
-  transition: color 250ms;
+  transition: color 250ms
+  cubic-bezier(0.4, 0, 0.2, 1);
 }
 .footer-container {
   display: flex;
@@ -410,7 +419,8 @@ height: 100%;
 display: flex;
 align-items: center;
 justify-content: center;
-transition: background-color 250ms;
+transition: background-color 250ms
+cubic-bezier(0.4, 0, 0.2, 1);
 }
 .footer-icon{
   fill: var(--color-white);
