--- a/css/styles.css
+++ b/css/styles.css
@@ -153,7 +153,10 @@ body {
   transition: color 250ms; 
   color: var(--accent-color);
   position: relative;
-  transition: color 250ms;
+  transition: color 250ms
+  cubic-bezier(0.4, 0, 0.2, 1);
+    padding-top: 32px;
+padding-bottom: 32px;
 }
 .studio{
   color: var(--color-blue);
@@ -169,8 +172,7 @@ body {
   border-radius: 2px;
 }
 .item-header{
-  padding-top: 32px;
-  padding-bottom: 32px;
+display: flex;
 }
 .item-header:not(:last-child){
   margin-right: 50px;
@@ -192,7 +194,8 @@ body {
   font-size: 14px;
   line-height: 1.17;
   letter-spacing: 0.02em;
-  transition: color 250ms;
+  transition: color 250ms 
+  cubic-bezier(0.4, 0, 0.2, 1);
 }
 .header-icon{
   fill: var(--color-grey);
@@ -313,6 +316,28 @@ background: linear-gradient(rgba(47, 48, 58, 0.4),rgba(47, 48, 58, 0.4)
 .wwd-item :only-child {
   margin-right: 30px;
 }
+.wwd-wrapper{
+  position: relative;
+}
+.wwd-img-text{
+  position: absolute;
+  font-weight: bold;
+font-size: 14px;
+line-height: 1.14;
+text-align: center;
+letter-spacing: 0.03em;
+text-transform: uppercase;
+color: #ffffff;
+background-color: rgba(47, 48, 58, 0.8);
+width: 100%;
+height: 70px;
+transform: translateY(-100%);
+padding: 27px 82px;
+}
+
+
+
+
 /*-------OUR-TEAM----------*/
 .our-team{
   padding-top: 94px;
@@ -328,6 +353,8 @@ background: linear-gradient(rgba(47, 48, 58, 0.4),rgba(47, 48, 58, 0.4)
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
+  background-color: #FFFFFF;
+
 }
 .our-team-title {
   font-weight: 700;
@@ -374,11 +401,13 @@ height: 100%;
 display: flex;
 justify-content: center;
 align-items: center;
-  transition: background-color 250ms;
+  transition: background-color 250ms 
+  cubic-bezier(0.4, 0, 0.2, 1);
 }
 .social-icon{
   fill: #AFB1B8;
-  transition: fill 250ms;
+  transition: fill 250ms
+  cubic-bezier(0.4, 0, 0.2, 1);
 }
 .social-icon-link:hover ,
 .social-icon-link:focus{
@@ -419,7 +448,8 @@ align-items: center;
   border-color: #AFB1B8;
   width: 170px;
   height: 92px;
-  transition: border-color 250ms;
+  transition: border-color 250ms
+  cubic-bezier(0.4, 0, 0.2, 1);
 }
 .clients-item:not(:last-child){
   margin-right: 30px;
@@ -427,7 +457,8 @@ align-items: center;
 
 .clients-icon{
   fill: #AFB1B8;
-  transition: fill 250ms;
+  transition: fill 250ms
+  cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .clients-link:hover ,
@@ -473,7 +504,8 @@ align-items: center;
   line-height: 1.71;
   letter-spacing: 0.03em;
   color: var(--color-grey);
-  transition: color 250ms;
+  transition: color 250ms
+  cubic-bezier(0.4, 0, 0.2, 1);
 }
 .link-footer-street{
   display: flex;
@@ -482,7 +514,8 @@ align-items: center;
   line-height: 1.71;
   letter-spacing: 0.03em;
   color: var(--color-white);
-  transition: color 250ms;
+  transition: color 250ms
+  cubic-bezier(0.4, 0, 0.2, 1);
 }
 .footer-container {
   display: flex;
@@ -518,7 +551,8 @@ height: 100%;
 display: flex;
 align-items: center;
 justify-content: center;
-transition: background-color 250ms;
+transition: background-color 250ms
+  cubic-bezier(0.4, 0, 0.2, 1);
 }
 .footer-icon{
   fill: var(--color-white);
@@ -552,7 +586,8 @@ a.link-footer:focus {
   background-color: rgba(0, 0, 0, 0.2);
   position: fixed;
   top: 0;
-  transition: opacity 300ms, visibility 300ms;
+  transition: opacity 300ms, visibility 300ms
+  cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal{
   min-width: 528px;
